--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/style.css" />
 </head>
 
 <body>
@@ -15,28 +15,45 @@
             <div class="header-wrapper">
                 <div class="header-block">
                     <a href="" class="header-logo">
-                        <img src="img/logo.png" alt="#">
+                        <img class="header-logo" src="img/logo.png" alt="#" />
                     </a>
                 </div>
                 <!-- header-block -->
                 <nav>
-                    <a href="#" class="nav-link active" >MAIN</a>
-                    <a href="#" class="nav-link" >OUR SERVICES</a>
-                    <a href="#" class="nav-link" >ABOUT</a>
-                    <a href="#" class="nav-link" >CONTACTS</a>
+                    <a href="#" class="nav-link active">MAIN</a>
+                    <a href="#" class="nav-link">OUR SERVICES</a>
+                    <a href="#" class="nav-link">ABOUT</a>
+                    <a href="#" class="nav-link">CONTACTS</a>
                 </nav>
 
                 <div class="header_lng">
                     <a href="#" class="header__lng-link">RU</a>
                     <a href="#" class="header__lng-link active">EN</a>
                 </div>
-            
             </div>
             <!-- header-wrapper -->
         </div>
 
         <!-- container -->
     </header>
+
+    <section class="intro">
+        <div class="container">
+            <div class="intro-content">
+                <div class="intro-block">
+
+                    <h1 class="intro-title"> KEEPING YOU ON THE ROAD WITH <br>
+                        SERVICE YOU CAN TRUST
+                    </h1>
+
+                    <a href="#" class="btn">
+                        Show more
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- intro -->
 </body>
 
 </html>
