--- a/index.html
+++ b/index.html
@@ -41,19 +41,58 @@
         <div class="container">
             <div class="intro-content">
                 <div class="intro-block">
-
-                    <h1 class="intro-title"> KEEPING YOU ON THE ROAD WITH <br>
+                    <h1 class="intro-title">
+                        KEEPING YOU ON THE ROAD WITH <br />
                         SERVICE YOU CAN TRUST
                     </h1>
 
-                    <a href="#" class="btn">
-                        Show more
-                    </a>
+                    <a href="#" class="btn"> Show more </a>
                 </div>
             </div>
         </div>
     </section>
     <!-- intro -->
+
+    <section class="info">
+        <div class="container">
+            <div class="info_wrapper">
+                <div class="info_block">
+                    <div class="info_item">
+                        <div class="info_img">
+                            <img src="img/phone.svg" alt="#" />
+                            <h3 class="info_title">CALL US NOW 222-222-222</h3>
+                            <p class="info_text">Feel free to call us</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="info_block">
+                    <div class="info_item">
+                        <div class="info_img">
+                            <img src="img/calendar.svg" alt="#" />
+                            <h3 class="info_title">GET FREE APPOITMET</h3>
+                            <p class="info_text">Free Diagnosis & Brake Checks</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="info_block">
+                    <div class="info_item">
+                        <div class="info_img">
+                            <img src="img/vector.svg" alt="#" />
+                            <h3 class="info_title">FIND US ON MAP</h3>
+                            <p class="info_text">New York, 1286 Ruumu Nanor</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- info wrapper -->
+        </div>
+        <!-- info container -->
+    </section>
+    <!-- info section -->
+
+    
 </body>
 
 </html>
