--- a/index.html
+++ b/index.html
@@ -1,279 +1,281 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="style/media.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
-  <link rel="stylesheet" href="style/style.css" />
-</head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header-wrapper">
+          <div class="header-block">
+            <a href="" class="header-logo">
+              <img class="header-logo" src="img/logo.png" alt="#" />
+            </a>
+          </div>
+          <!-- header-block -->
+          <nav class="nav">
+            <a href="#" class="nav-link active">MAIN</a>
+            <a href="#" class="nav-link">OUR SERVICES</a>
+            <a href="#" class="nav-link">ABOUT</a>
+            <a href="#" class="nav-link">CONTACTS</a>
+          </nav>
 
-<body>
-  <header class="header">
-    <div class="container">
-      <div class="header-wrapper">
-        <div class="header-block">
-          <a href="" class="header-logo">
-            <img class="header-logo" src="img/logo.png" alt="#" />
-          </a>
-        </div>
-        <!-- header-block -->
-        <nav>
-          <a href="#" class="nav-link active">MAIN</a>
-          <a href="#" class="nav-link">OUR SERVICES</a>
-          <a href="#" class="nav-link">ABOUT</a>
-          <a href="#" class="nav-link">CONTACTS</a>
-        </nav>
-
-        <div class="header_lng">
-          <a href="#" class="header__lng-link">RU</a>
-          <a href="#" class="header__lng-link active">EN</a>
-        </div>
-      </div>
-      <!-- header-wrapper -->
-    </div>
-
-    <!-- container -->
-  </header>
-
-  <section class="intro">
-    <div class="container">
-      <div class="intro-content">
-        <div class="intro-block">
-          <h1 class="intro-title">
-            KEEPING YOU ON THE ROAD WITH <br />
-            SERVICE YOU CAN TRUST
-          </h1>
-
-          <a href="#" class="btn"> Show more </a>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- intro -->
-
-  <section class="info">
-    <div class="container">
-      <div class="wrapper">
-        <div class="block">
-          <div class="info_item">
-            <div class="info_img">
-              <img src="img/phone.svg" alt="#" />
-              <h4 class="info_title">CALL US NOW 222-222-222</h4>
-              <p class="info_text">Feel free to call us</p>
-            </div>
+          <div class="header_lng">
+            <a href="#" class="header__lng-link">RU</a>
+            <a href="#" class="header__lng-link active">EN</a>
           </div>
         </div>
+        <!-- header-wrapper -->
+      </div>
 
-        <div class="block">
-          <div class="info_item">
-            <div class="info_img">
-              <img src="img/calendar2.svg" alt="#" />
-              <h4 class="info_title">GET FREE APPOITMET</h4>
-              <p class="info_text">Free Diagnosis & Brake Checks</p>
-            </div>
-          </div>
-        </div>
+      <!-- container -->
+    </header>
 
-        <div class="block">
-          <div class="info_item">
-            <div class="info_img">
-              <img src="img/vector.svg" alt="#" />
-              <h4 class="info_title">FIND US ON MAP</h4>
-              <p class="info_text">New York, 1286 Ruumu Nanor</p>
-            </div>
+    <section class="intro">
+      <div class="container">
+        <div class="intro-content">
+          <div class="intro-block">
+            <h1 class="intro-title">
+              KEEPING YOU ON THE ROAD WITH <br />
+              SERVICE YOU CAN TRUST
+            </h1>
+
+            <a href="#" class="btn"> Show more </a>
           </div>
         </div>
       </div>
-      <!-- info wrapper -->
-    </div>
-    <!-- info container -->
-  </section>
-  <!-- info section -->
-  <section class="section">
-    <div class="container">
-      <h2 class="block_title">OUR SERVICES</h2>
-      <a href="" class="block_link"> VIEW ALL SERVICES </a>
+    </section>
+    <!-- intro -->
 
-      <div class="wrapper">
-        <div class="block">
-          <a href="#" class="services_item">
-            <div class="services_content" style="background-image: url(img/diagnostic.jpg)">
-              <div class="services_content_item">
-                <div class="services_img">
-                  <img src="img/plus.svg" alt="#" />
-                </div>
-                <p class="services_text">
-                  ANNUAL CHECKUPS FROM YOUR PHYSICIAN KEEP YOU IN GOOD HEALTH
-                </p>
+    <section class="info">
+      <div class="container">
+        <div class="wrapper">
+          <div class="block">
+            <div class="info_item">
+              <div class="info_img">
+                <img src="img/phone.svg" alt="#" />
+                <h4 class="info_title">CALL US NOW 222-222-222</h4>
+                <p class="info_text">Feel free to call us</p>
               </div>
             </div>
-            <h3 class="services_title">DIAGNOSTIC</h3>
-          </a>
-        </div>
+          </div>
 
-        <div class="block">
-          <a href="#" class="services_item">
-            <div class="services_content" style="background-image: url(img/tires.jpg)">
-              <div class="services_content_item">
-                <div class="services_img">
-                  <img src="img/plus.svg" alt="#" />
-                </div>
-                <p class="services_text">
-                  ANNUAL CHECKUPS FROM YOUR PHYSICIAN KEEP YOU IN GOOD HEALTH
-                </p>
+          <div class="block">
+            <div class="info_item">
+              <div class="info_img">
+                <img src="img/calendar2.svg" alt="#" />
+                <h4 class="info_title">GET FREE APPOITMET</h4>
+                <p class="info_text">Free Diagnosis & Brake Checks</p>
               </div>
             </div>
-            <h3 class="services_title">TIRES & WHEELS</h3>
-          </a>
-        </div>
+          </div>
 
-        <div class="block">
-          <a href="#" class="services_item">
-            <div class="services_content" style="background-image: url(img/Engine.jpg)">
-              <div class="services_content_item">
-                <div class="services_img">
-                  <img src="img/plus.svg" alt="#" />
-                </div>
-                <p class="services_text">
-                  ANNUAL CHECKUPS FROM YOUR PHYSICIAN KEEP YOU IN GOOD HEALTH
-                </p>
+          <div class="block">
+            <div class="info_item">
+              <div class="info_img">
+                <img src="img/vector.svg" alt="#" />
+                <h4 class="info_title">FIND US ON MAP</h4>
+                <p class="info_text">New York, 1286 Ruumu Nanor</p>
               </div>
             </div>
-            <h3 class="services_title">ENGINES</h3>
-          </a>
+          </div>
+        </div>
+        <!-- info wrapper -->
+      </div>
+      <!-- info container -->
+    </section>
+    <!-- info section -->
+    <section class="section">
+      <div class="container">
+        <h2 class="info_title">OUR SERVICES</h2>
+        <a href="" class="block_link"> VIEW ALL SERVICES </a>
+
+        <div class="wrapper">
+          <div class="block">
+            <a href="#" class="services_item">
+              <div
+                class="services_content"
+                style="background-image: url(img/diagnostic.jpg)"
+              >
+                <div class="services_content_item">
+                  <div class="services_img">
+                    <img src="img/plus.svg" alt="#" />
+                  </div>
+                  <p class="services_text">
+                    ANNUAL CHECKUPS FROM YOUR PHYSICIAN KEEP YOU IN GOOD HEALTH
+                  </p>
+                </div>
+              </div>
+              <h3 class="services_title">DIAGNOSTIC</h3>
+            </a>
+          </div>
+
+          <div class="block">
+            <a href="#" class="services_item">
+              <div
+                class="services_content"
+                style="background-image: url(img/tires.jpg)"
+              >
+                <div class="services_content_item">
+                  <div class="services_img">
+                    <img src="img/plus.svg" alt="#" />
+                  </div>
+                  <p class="services_text">
+                    ANNUAL CHECKUPS FROM YOUR PHYSICIAN KEEP YOU IN GOOD HEALTH
+                  </p>
+                </div>
+              </div>
+              <h3 class="services_title">TIRES & WHEELS</h3>
+            </a>
+          </div>
+
+          <div class="block">
+            <a href="#" class="services_item">
+              <div
+                class="services_content"
+                style="background-image: url(img/Engine.jpg)"
+              >
+                <div class="services_content_item">
+                  <div class="services_img">
+                    <img src="img/plus.svg" alt="#" />
+                  </div>
+                  <p class="services_text">
+                    ANNUAL CHECKUPS FROM YOUR PHYSICIAN KEEP YOU IN GOOD HEALTH
+                  </p>
+                </div>
+              </div>
+              <h3 class="services_title">ENGINES</h3>
+            </a>
+          </div>
         </div>
       </div>
-    </div>
-  </section>
-  <!-- Services end -->
+    </section>
+    <!-- Services end -->
 
-  <section class="section about">
-    <div class="container">
-      <div class="about_wrapper">
-        <div class="about_block">
-          <h2 class="block_title">
-            WE UNDERSTAND HOW IMPORTANT IT IS TO FIND THE RIGHT AUTO SERVICE
-          </h2>
-          <p class="about_text">
-            Car repairs and maintenance can be expensive and no one wants to
-            have pay to repair damage caused by shoddy repair service. When
-            you bring your car into our auto shop, you won’t have to worry
-            because our staff is comprised of ASE certified technicians who
-            are committed to making sure you have a safe dependable car.
-          </p>
-          <a class="about_link" href="#"> MORE ABOUT US </a>
+    <section class="about">
+      <div class="container">
+        <div class="about_wrapper">
+          <div class="about_block">
+            <h2 class="block_title">
+              WE UNDERSTAND HOW IMPORTANT IT IS TO FIND THE RIGHT AUTO SERVICE
+            </h2>
+            <p class="about_text">
+              Car repairs and maintenance can be expensive and no one wants to
+              have pay to repair damage caused by shoddy repair service. When
+              you bring your car into our auto shop, you won’t have to worry
+              because our staff is comprised of ASE certified technicians who
+              are committed to making sure you have a safe dependable car.
+            </p>
+            <a class="about_link" href="#"> MORE ABOUT US </a>
+          </div>
+          <!-- about_block -->
+          <div class="about_img">
+            <img class="about-img" src="img/about_img.jpg" alt="#" />
+          </div>
         </div>
-        <!-- about_block -->
-        <div class="about_img">
-          <img src="img/about_img.jpg" alt="#" />
+        <!-- wrapper_block -->
+      </div>
+      <!-- container -->
+    </section>
+    <!-- section_about -->
+
+    <section class="section_process">
+      <div class="container">
+        <h2 class="process_title">FAST & EASY</h2>
+        <h3 class="process_subtitle">our work process</h3>
+
+        <div class="wrapper">
+          <div class="block">
+            <div class="process_item">
+              <h4 class="info_title">1.Request your quote</h4>
+              <p class="info_text">We will be there when you most need us</p>
+            </div>
+          </div>
+
+          <div class="block">
+            <div class="process_item">
+              <h4 class="info_title">02. BRING YOUR VEHICLE</h4>
+              <p class="info_text">We are car guys at heart</p>
+            </div>
+          </div>
+
+          <div class="block">
+            <div class="process_item">
+              <h4 class="info_title">03. GET IT REPAIRED</h4>
+              <p class="info_text">High quality, low cost car servicing</p>
+            </div>
+          </div>
         </div>
       </div>
-      <!-- wrapper_block -->
-    </div>
-    <!-- container -->
-  </section>
-  <!-- section_about -->
+    </section>
+    <!-- Process section -->
 
-  <section class="section process">
-    <div class="container">
-      <h2 class="process_title">FAST & EASY</h2>
-      <h3 class="process_subtitle">our work process</h3>
+    <section class="contacts">
+      <div class="container">
+        <h2 class="block_title">Contact us</h2>
 
-      <div class="wrapper">
-        <div class="block">
-          <div class="process_item">
-            <h4 class="info_title">1.Request your quote</h4>
-            <p class="info_text">We will be there when you most need us</p>
+        <form class="contacts_form" action="">
+          <div class="form_row">
+            <div class="form_group">
+              <input type="text" class="input" placeholder=" " />
+              <label for="" class="label"> Name </label>
+            </div>
+
+            <div class="form_group">
+              <input type="text" class="input" placeholder=" " />
+              <label for="" class="label"> Last name </label>
+            </div>
           </div>
-        </div>
 
-        <div class="block">
-          <div class="process_item">
-            <h4 class="info_title">02. BRING YOUR VEHICLE</h4>
-            <p class="info_text">We are car guys at heart</p>
+          <div class="form_row">
+            <div class="form_group">
+              <input type="email" class="input" placeholder=" " />
+              <label for="" class="label"> Email </label>
+            </div>
+
+            <div class="form_group">
+              <input type="tel" class="input" placeholder=" " />
+              <label for="" class="label"> Phone </label>
+            </div>
           </div>
-        </div>
 
-        <div class="block">
-          <div class="process_item">
-            <h4 class="info_title">03. GET IT REPAIRED</h4>
-            <p class="info_text">High quality, low cost car servicing</p>
+          <div class="form_row">
+            <div class="form_group">
+              <textarea class="textarea" placeholder="" name=""></textarea>
+              <label for="" class="label">Message</label>
+            </div>
+          </div>
+
+          <button class="btn" type="submit">Send</button>
+        </form>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer_wrapper">
+          <p class="copyright">© 2021 Auto theme by Frontend Tricks</p>
+          <div class="footer_soc">
+            <a href="" class="footer_soc-link">
+              <img src="img/3.svg" alt="#" />
+            </a>
+
+            <a href="" class="footer_soc-link">
+              <img src="img/2.svg" alt="#" />
+            </a>
+
+            <a href="" class="footer_soc-link">
+              <img src="img/1.svg" alt="#" />
+            </a>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-  <!-- Process section -->
-
-  <section class="contacts">
-    <div class="container">
-      <h2 class="block_title">Contact us</h2>
-
-      <form class="contacts_form" action="">
-        <div class="form_row">
-          <div class="form_group">
-            <input type="text" class="input" placeholder=" " />
-            <label for="" class="label"> Name </label>
-          </div>
-
-          <div class="form_group">
-            <input type="text" class="input" placeholder=" " />
-            <label for="" class="label"> Last name </label>
-          </div>
-        </div>
-
-        <div class="form_row">
-          <div class="form_group">
-            <input type="email" class="input" placeholder=" " />
-            <label for="" class="label"> Email </label>
-          </div>
-
-          <div class="form_group">
-            <input type="tel" class="input" placeholder=" " />
-            <label for="" class="label"> Phone </label>
-          </div>
-        </div>
-
-        <div class="form_row">
-          <div class="form_group">
-            <textarea class="textarea" placeholder="" name=""></textarea>
-            <label for="" class="label">Message</label>
-          </div>
-        </div>
-
-        <button class="btn" type="submit">
-          Send
-        </button>
-
-      </form>
-    </div>
-  </section>
-
-<footer class="footer">
-  <div class="container">
-    <div class="footer_wrapper">
-      <p class="copyright">
-        © 2021 Auto theme by Frontend Tricks
-      </p>
-      <div class="footer_soc">
-        <a href="" class="footer_soc-link">
-          <img src="img/3.svg" alt="#">
-        </a>
-
-        <a href="" class="footer_soc-link">
-          <img src="img/2.svg" alt="#">
-        </a>
-
-        <a href="" class="footer_soc-link">
-          <img src="img/1.svg" alt="#">
-        </a>
-      </div>
-    </div>
-  </div>
-</footer>
-
-<body>
-
+    </footer>
+  </body>
 </html>
